--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,9 +56,11 @@
   <span>Welcome</span>
     <div class="spacer"></div>
     
-</div>
+</div><app-bar-chart>
+  
+</app-bar-chart>
 <app-pie-chart></app-pie-chart>
-<app-bar-chart></app-bar-chart>
+
 
 
 
